--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 
     <nav></nav>
 
-    <main></main>
+    <main>
+      <div class="blocks-container"></div>
+    </main>
 
     <aside></aside>
 
