--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
 
     <footer></footer>
 
-    <script src="./src/js/index.js"></script>
+    <script type="module" src="./src/js/index.js"></script>
   </body>
 </html>
